--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha tests/*.js --exit",
-    "puppeteer": "NODE_ENV=test mocha tests/puppeteer.js --exit",
+    "test": "NODE_ENV=test mocha tests/*.js --exit --timeout 5000",
     "start": "node app",
     "dev": "nodemon app"
   },
